fix: layout when sidebar are collapsed

--- a/src/Components/LeadsComponent/LeadsFilter/LeadsFilter.css
+++ b/src/Components/LeadsComponent/LeadsFilter/LeadsFilter.css
@@ -1,6 +1,6 @@
 .leads-header-container {
   position: fixed;
-  width: calc(100% - 250px);
+  width: calc(100% - var(--side-bar-width));
   background-color: #dfefd9f9;
   padding-inline: 20px;
   padding-block: 10px;
